<resources>
    <string name="app_name">MoviesApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_budget">Movie Budget</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="release_data">Release Data</string>
</resources>