<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/movieImage"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black"
        android:text="@string/movie_title"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movieOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center"
        android:text="@string/movie_overview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/starIcon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_star"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toBottomOf="@+id/movieOverview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black"
        android:text="@string/movie_rating"
        app:layout_constraintBottom_toBottomOf="@+id/starIcon"
        app:layout_constraintStart_toEndOf="@+id/starIcon"
        app:layout_constraintTop_toTopOf="@+id/starIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movie_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black"
        android:text="@string/movie_budget"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toBottomOf="@+id/movieRating" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black"
        android:text="@string/movie_genre"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRating" />


</androidx.constraintlayout.widget.ConstraintLayout>